# chatxt

./: .gitignore  README.md
Chatxt_client/: CMakeLists.txt  config.ini  rc.qrc
Chatxt_client/Header/: ClickedLabel.h  HttpMgr.h  Singleton.h  TimberBtn.h  global.h  mainwindow.h  registerdialog.h
Chatxt_client/Sources/: ClickedLabel.cpp  HttpMgr.cpp  TimberBtn.cpp  global.cpp  logindialog.cpp  main.cpp  mainwindow.cpp  registerdialog.cpp
Chatxt_client/UI/: logindialog.ui  mainwindow.ui  registerdialog.ui
Chatxt_client/style/: stylesheet.qss
Chatxt_gateserver/: CMakeLists.txt  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini  head.h  main.cpp
Chatxt_gateserver/AsioIOServicePool/: AsioIOServicePool.cpp  AsioIOServicePool.h
Chatxt_gateserver/CServer/: CServer.cpp  CServer.h
Chatxt_gateserver/ConfigMgr/: ConfigMgr.cpp  ConfigMgr.h
Chatxt_gateserver/HttpConn/: HttpConn.cpp  HttpConn.h
Chatxt_gateserver/LogicSystem/: LogicSystem.cpp  LogicSystem.h  Singleton.h
Chatxt_gateserver/MysqlDao/: MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h
Chatxt_gateserver/RedisMgr/: RedisMgr.cpp  RedisMgr.h
Chatxt_gateserver/VerifyGrpcClient/: VerifyGrpcClient.h  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
